# cmiputil

./: .buildinfo  .gitignore  .gitmodules  ESGFSearch.py  LICENSE  README.braceexpand.html  README.md  README.rst  braceexpand.html  checkDRSname.html  cmiputil.html  config.html  convoc.html  convoc.py  createSampleConf.html  dds.html  draw-timeseries.html  drs.html  drs.py  esgfdatainfo.html  esgfsearch.html  esgfsearch.py  genindex.html  index.html  objects.inv  pc-ab4co2-ts.py  py-modindex.html  relocateFilesAsDRS.html  search.html  searchindex.js  setup.cfg  test_convoc.py  test_drs.py  timer.html
Sample/: draw-timeseries01.py  draw-timeseries03.py
Test/: draw-timeseries00.py  draw-timeseries01.py  draw-timeseries02.py
_modules/: config.html  convoc.html  dds.html  drs.html  esgfdatainfo.html  esgfsearch.html  index.html  timer.html
_modules/cmiputil/: convoc.html  drs.html  esgfsearch.html
_sources/: convoc.rst.txt  createSampleConf.rst.txt  dds.rst.txt  index.rst.txt  relocateFilesAsDRS.rst.txt  timer.rst.txt
_static/: bizstyle.js
cmiputil/: __init__.py  config.py  convoc.py  dds.py  drs.py  esgfdatainfo.py  esgfsearch.py  timer.py
docs/: braceexpand.rst  checkDRSname.rst  cmiputil.convoc.rst  cmiputil.drs.rst  cmiputil.esgfsearch.rst  cmiputil.rst  conf.py  config.rst  createSampleConf.rst  draw-timeseries.rst  drs.rst  esgfdatainfo.rst  esgfsearch.rst  index.rst  relocateFilesAsDRS.rst
samples/: draw-timeseries.py  draw-timeseries01.py  draw-timeseries02.py  draw-timeseries03.py  pc-ab4co2-ts.py
tests/: test_config.py  test_convoc.py  test_dds.py  test_drs.py  test_esgfdatainfo.py
