[metadata]
name = cmiputil
version = attr:cmiputil.__version__
author = Takahiro INOUE
author_email = tinoue@rist.jp
description = homemade utilities for CMIP6/ESGF
long_description = file:README.md
url = https://github.com/RIST-tinoue/cmiputil
license = BSD 3-Clause License

classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
