[metadata]
name = cmiputil
version = attr:cmiputil.__version__
author = Takahiro INOUE
description = a homemade small package for CMIP6/ESGF data users.
long_description = file: README.rst, LICENSE
url = https://github.com/RIST-tinoue/cmiputil
license = BSD 3-Clause License

classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

